<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpFragment">

    <TextView
        android:id="@+id/text_get_vaccinated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/get_vaccinated"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_vaccine_centres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/vaccine_centres_near_me"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_book_vaccination_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/book_a_vaccination_slot"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_helpdesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/helpdesk"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_select_a_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/select_a_region"
        android:textSize="15sp" />


    <Spinner
        android:id="@+id/spinner_locations_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/array_regions_1" />

    <Button
        android:id="@+id/button_helpline_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/get_helpline_no"
        android:textAllCaps="false" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/color1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linear_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_helpline_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/button_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/ic_call" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_mygov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mygov_corona_helpdesk"
                android:textAllCaps="false"
                android:fontFamily="@font/poppinsmedium"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>