<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompareFragment">

    <TextView
        android:id="@+id/text_compare_two_regions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/compare_two_regions"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_locations_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/array_regions" />

    <Spinner
        android:id="@+id/spinner_locations_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/array_regions_1" />

    <TextView
        android:id="@+id/text_select_a_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/select_a_parameter"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/array_parameters" />

    <Button
        android:id="@+id/button_compare_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/compare_info"
        android:textAllCaps="false" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/comparison_chart"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_margin="10dp"
                android:background="@color/color1"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>