<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/text_select_a_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/select_a_region"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/array_regions" />

    <Button
        android:id="@+id/button_track_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/track_info"
        android:textAllCaps="false" />


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/color1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linear_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_total_infected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/total_infected"
                        android:textColor="@color/purple"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_total_infected_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/text_total_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/total_deaths"
                        android:textColor="@color/purple"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_total_deaths_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/text_total_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/total_recovered"
                        android:textColor="@color/purple"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_total_recovered_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/text_last_updated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>